--- a/src/main/resources/com/example/syshealthfx/admin-views/departamentos/departamentos.fxml
+++ b/src/main/resources/com/example/syshealthfx/admin-views/departamentos/departamentos.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -18,28 +17,7 @@
             <Label prefHeight="125.0" prefWidth="839.0" styleClass="header" text="ADMINISTRACIÓN DE DEPARTAMENTOS" />
          </children>
       </HBox>
-      <HBox alignment="CENTER" prefHeight="173.0" prefWidth="1069.0">
-         <children>
-            <HBox id="btnRegistrar" fx:id="btnListaEmpleados1" alignment="CENTER" prefHeight="137.0" prefWidth="368.0" styleClass="panel-acceso">
-               <children>
-                  <ImageView fitHeight="92.0" fitWidth="100.0">
-                     <image>
-                        <Image url="@../../assets/registro-en-linea.png" />
-                     </image>
-                  </ImageView>
-                  <Label alignment="BASELINE_CENTER" contentDisplay="CENTER" prefHeight="98.0" prefWidth="201.0" style="-fx-wrap-text: true;" text="REGISTRAR EMPLEADO / USUARIO" textAlignment="CENTER">
-                     <font>
-                        <Font name="Cascadia Code Regular" size="12.0" />
-                     </font>
-                  </Label>
-               </children>
-            </HBox>
-         </children>
-         <padding>
-            <Insets top="20.0" />
-         </padding>
-      </HBox>
-      <GridPane hgap="30.0" prefHeight="424.0" prefWidth="1069.0" styleClass="panel-acceso-depa" vgap="20.0">
+      <GridPane hgap="30.0" prefHeight="479.0" prefWidth="1069.0" styleClass="panel-acceso-depa" vgap="20.0">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -63,6 +41,20 @@
                   </Label>
                </children>
             </HBox>
+            <HBox id="btnRegistrar" fx:id="btnListaEmpleados1" alignment="CENTER" prefHeight="137.0" prefWidth="368.0" styleClass="panel-acceso" GridPane.rowIndex="1">
+               <children>
+                  <ImageView fitHeight="92.0" fitWidth="100.0">
+                     <image>
+                        <Image url="@../../assets/registro-en-linea.png" />
+                     </image>
+                  </ImageView>
+                  <Label alignment="BASELINE_CENTER" contentDisplay="CENTER" prefHeight="98.0" prefWidth="201.0" style="-fx-wrap-text: true;" text="REGISTRAR EMPLEADO / USUARIO" textAlignment="CENTER">
+                     <font>
+                        <Font name="Cascadia Code Regular" size="12.0" />
+                     </font>
+                  </Label>
+               </children>
+            </HBox>
             <HBox id="btnRegistroDepartamento" fx:id="btnModificarDepartamento" prefHeight="100.0" prefWidth="200.0" styleClass="panel-acceso" GridPane.columnIndex="1">
                <children>
                   <ImageView fitHeight="83.0" fitWidth="103.0" pickOnBounds="true" preserveRatio="true">
@@ -77,17 +69,7 @@
                   </Label>
                </children>
             </HBox>
-            <HBox prefHeight="100.0" prefWidth="200.0" styleClass="panel-acceso" GridPane.rowIndex="1">
-               <children>
-                  <ImageView fitHeight="117.0" fitWidth="97.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../assets/editar.png" />
-                     </image>
-                  </ImageView>
-                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="95.0" prefWidth="199.0" style="-fx-wrap-text: true;" text="MODIFICAR JEFE DE AREA" textAlignment="CENTER" />
-               </children>
-            </HBox>
-            <HBox prefHeight="226.0" prefWidth="507.0" styleClass="panel-acceso" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <HBox id="btnPdfDepartamento" fx:id="btnPdfDepartamento" prefHeight="226.0" prefWidth="507.0" styleClass="panel-acceso" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <children>
                   <ImageView fitHeight="86.0" fitWidth="87.0" pickOnBounds="true" preserveRatio="true">
                      <image>
