--- a/src/main/resources/com/example/syshealthfx/admin-views/citas/calendario.fxml
+++ b/src/main/resources/com/example/syshealthfx/admin-views/citas/calendario.fxml
@@ -1,14 +1,76 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.syshealthfx.admin-views.citas.Calendario"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane fx:id="frame" prefHeight="650.0" prefWidth="1280.0" stylesheets="@../../styles.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.syshealthfx.Calendario">
+   <children>
+      <HBox layoutX="6.0" prefHeight="650.0" prefWidth="1280.0">
+         <children>
+            <VBox prefHeight="200.0" prefWidth="100.0">
+               <children>
+                  <HBox alignment="CENTER" prefHeight="73.0" prefWidth="599.0" spacing="10.0">
+                     <children>
+                        <Button mnemonicParsing="false" onAction="#backOneMonth" styleClass="btn-calendario" text="&lt;" />
+                        <Text fx:id="year" strokeType="OUTSIDE" strokeWidth="0.0" text="####" />
+                        <Text fx:id="month" strokeType="OUTSIDE" strokeWidth="0.0" text="####" />
+                        <Button mnemonicParsing="false" onAction="#forwardOneMonth" styleClass="btn-calendario" text="&gt;" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" prefHeight="44.0" prefWidth="566.0" spacing="70.0">
+                     <children>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="DOM" />
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="LUN" />
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="MAR" />
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="MIER" />
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="JUE" />
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="VIE" />
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="SAB" />
+                     </children>
+                  </HBox>
+                  <FlowPane fx:id="calendar" prefHeight="352.0" prefWidth="583.0" />
+               </children>
+            </VBox>
+            <VBox prefHeight="650.0" prefWidth="698.0">
+               <children>
+                  <VBox alignment="CENTER" prefHeight="103.0" prefWidth="697.0">
+                     <children>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="AGENDA DEL DIA">
+                           <font>
+                              <Font size="31.0" />
+                           </font>
+                        </Text>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="HOY ES: ">
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font>
+                        </Text>
+                        <Text fx:id="horaActual" strokeType="OUTSIDE" strokeWidth="0.0" text="HORA ACTUAL: ">
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font>
+                        </Text>
+                     </children>
+                  </VBox>
+                  <HBox alignment="CENTER" prefHeight="64.0" prefWidth="697.0" spacing="10.0">
+                     <children>
+                        <Button fx:id="agendarCita" mnemonicParsing="false" onAction="#agregarCitaEvent" styleClass="btn-agendar" text="AGENDAR CITA" />
+                     </children>
+                  </HBox>
+                  <ScrollPane fx:id="citasHoy" prefHeight="483.0" prefWidth="669.0">
+                    <content>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
+                    </content>
+                  </ScrollPane>
+               </children>
+            </VBox>
+         </children>
+      </HBox>
+   </children>
 </AnchorPane>
