--- a/src/main/resources/com/example/syshealthfx/admin-views/citas/citas.fxml
+++ b/src/main/resources/com/example/syshealthfx/admin-views/citas/citas.fxml
@@ -10,14 +10,14 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1069.0" stylesheets="@../../styles.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.syshealthfx.admincontrollers.Citas">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1069.0" stylesheets="@../../styles.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" >
    <children>
       <HBox alignment="CENTER" prefHeight="77.0" prefWidth="600.0" styleClass="headerNombre" stylesheets="@../../styles.css">
          <children>
             <Label prefHeight="125.0" prefWidth="839.0" styleClass="header" text="ADMINISTRACIÓN DE CITAS" />
          </children>
       </HBox>
-      <GridPane hgap="30.0" prefHeight="517.0" prefWidth="1069.0" styleClass="panel-acceso-container" vgap="20.0">
+      <GridPane gridLinesVisible="true" hgap="30.0" prefHeight="517.0" prefWidth="1069.0" styleClass="panel-acceso-container" vgap="20.0">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -27,7 +27,7 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <HBox alignment="CENTER" prefHeight="181.0" prefWidth="441.0" styleClass="panel-acceso">
+            <HBox id="btnCalendario" alignment="CENTER" prefHeight="181.0" prefWidth="441.0" styleClass="panel-acceso">
                <children>
                   <ImageView fitHeight="79.0" fitWidth="86.0">
                      <image>
@@ -41,7 +41,7 @@
                   </Label>
                </children>
             </HBox>
-            <HBox prefHeight="100.0" prefWidth="200.0" styleClass="panel-acceso" GridPane.columnIndex="1">
+            <HBox id="btnCrearCita" prefHeight="100.0" prefWidth="200.0" styleClass="panel-acceso" GridPane.columnIndex="1">
                <children>
                   <ImageView fitHeight="117.0" fitWidth="97.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -55,7 +55,7 @@
                   </Label>
                </children>
             </HBox>
-            <HBox prefHeight="226.0" prefWidth="507.0" styleClass="panel-acceso" GridPane.rowIndex="1">
+            <HBox id="btnGenerarReporteCitas" prefHeight="226.0" prefWidth="507.0" styleClass="panel-acceso" GridPane.rowIndex="1">
                <children>
                   <ImageView fitHeight="86.0" fitWidth="87.0" pickOnBounds="true" preserveRatio="true">
                      <image>
