--- a/src/main/resources/com/example/syshealthfx/admin-views/citas/crear-cita.fxml
+++ b/src/main/resources/com/example/syshealthfx/admin-views/citas/crear-cita.fxml
@@ -1,14 +1,75 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.syshealthfx.admin-views.citas.CrearCita"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="492.0" prefWidth="673.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.syshealthfx.CrearCita">
+   <children>
+      <VBox alignment="TOP_CENTER" prefHeight="492.0" prefWidth="673.0" spacing="15.0">
+         <children>
+            <Label alignment="CENTER" prefHeight="47.0" prefWidth="692.0" style="-fx-padding: 10; -fx-border-color: transparent transparent black transparent;" text="CREAR CITA">
+               <font>
+                  <Font name="System Bold" size="32.0" />
+               </font>
+            </Label>
+            <GridPane prefHeight="371.0" prefWidth="673.0">
+               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+               </rowConstraints>
+               <children>
+                  <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
+                     <children>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="SELECCIONAR PACIENTE" />
+                        <ComboBox fx:id="seleccionarPaciente" editable="true" layoutX="10.0" layoutY="27.0" prefHeight="25.0" prefWidth="289.0" />
+                     </children>
+                  </VBox>
+                  <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1">
+                     <children>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="SELECCIONAR MÉDICO" />
+                        <ComboBox fx:id="seleccionarMedico" editable="true" prefHeight="25.0" prefWidth="297.0" />
+                     </children>
+                  </VBox>
+                  <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="1">
+                     <children>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="SELECCIONAR DIA" />
+                        <DatePicker fx:id="seleccionarDia" />
+                     </children>
+                  </VBox>
+                  <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                     <children>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="SELECCIONAR HORARIO" />
+                        <ComboBox fx:id="seleccionarHorario" prefWidth="150.0" />
+                     </children>
+                  </VBox>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0" GridPane.rowIndex="2">
+                     <children>
+                        <Button mnemonicParsing="false" onAction="#subirCita" styleClass="btn-agendar" stylesheets="@../../styles.css" text="CREAR CITA" />
+                        <Button mnemonicParsing="false" styleClass="btn-agendar" stylesheets="@../../styles.css" text="CANCELAR" />
+                     </children>
+                     <GridPane.margin>
+                        <Insets />
+                     </GridPane.margin>
+                  </HBox>
+               </children>
+            </GridPane>
+         </children>
+      </VBox>
+   </children>
 </AnchorPane>
