--- a/src/main/resources/com/example/syshealthfx/admin-views/laboratorio/laboratorio.fxml
+++ b/src/main/resources/com/example/syshealthfx/admin-views/laboratorio/laboratorio.fxml
@@ -17,13 +17,12 @@
             <Label prefHeight="125.0" prefWidth="839.0" styleClass="header" text="ADMINISTRACIÓN DE LABORATORIO" />
          </children>
       </HBox>
-      <GridPane hgap="30.0" prefHeight="517.0" prefWidth="1069.0" styleClass="panel-acceso-container" vgap="20.0">
+      <GridPane hgap="30.0" prefHeight="357.0" prefWidth="1069.0" styleClass="panel-acceso-container" vgap="20.0">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
          </columnConstraints>
          <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
@@ -34,38 +33,14 @@
                         <Image url="@../../assets/muestra-de-sangre.png" />
                      </image>
                   </ImageView>
-                  <Label alignment="BASELINE_CENTER" contentDisplay="CENTER" prefHeight="181.0" prefWidth="513.0" style="-fx-wrap-text: true;" text="LISTA DE PRUEBAS DISPONIBLES" textAlignment="CENTER">
+                  <Label alignment="BASELINE_CENTER" contentDisplay="CENTER" prefHeight="181.0" prefWidth="513.0" style="-fx-wrap-text: true;" text="PRUEBAS REALIZADAS" textAlignment="CENTER">
                      <font>
                         <Font name="Cascadia Code Regular" size="12.0" />
                      </font>
                   </Label>
                </children>
             </HBox>
-            <HBox id="btnConsultarOrden" prefHeight="100.0" prefWidth="200.0" styleClass="panel-acceso" GridPane.columnIndex="1">
-               <children>
-                  <ImageView fitHeight="83.0" fitWidth="103.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../assets/orden-lab.png" />
-                     </image>
-                  </ImageView>
-                  <Label prefHeight="131.0" prefWidth="229.0" style="-fx-wrap-text: true;" text="CONSULTAR ORDEN DE LABORATORIO" textAlignment="CENTER">
-                     <font>
-                        <Font size="1.0" />
-                     </font>
-                  </Label>
-               </children>
-            </HBox>
-            <HBox id="btnAgregarPrueba" prefHeight="100.0" prefWidth="200.0" styleClass="panel-acceso" GridPane.rowIndex="1">
-               <children>
-                  <ImageView fitHeight="117.0" fitWidth="97.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../assets/editar.png" />
-                     </image>
-                  </ImageView>
-                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="95.0" prefWidth="199.0" style="-fx-wrap-text: true;" text="AGREGAR NUEVA PRUEBA" textAlignment="CENTER" />
-               </children>
-            </HBox>
-            <HBox id="btnGenerarReportePruebas" prefHeight="226.0" prefWidth="507.0" styleClass="panel-acceso" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <HBox id="btnGenerarReportePruebas" prefHeight="226.0" prefWidth="507.0" styleClass="panel-acceso" GridPane.columnIndex="1">
                <children>
                   <ImageView fitHeight="86.0" fitWidth="87.0" pickOnBounds="true" preserveRatio="true">
                      <image>
