--- a/src/main/resources/com/example/syshealthfx/admin-views/departamentos/lista-empleados.fxml
+++ b/src/main/resources/com/example/syshealthfx/admin-views/departamentos/lista-empleados.fxml
@@ -16,7 +16,7 @@
       </HBox>
       <HBox alignment="CENTER_LEFT" prefHeight="109.0" prefWidth="1069.0" spacing="15.0">
          <children>
-            <Button mnemonicParsing="false" text="REGRESAR" id="btnBack"/>
+            <Button id="btnBack" mnemonicParsing="false" text="REGRESAR" />
             <VBox prefHeight="109.0" prefWidth="905.0">
                <children>
                   <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
@@ -29,7 +29,7 @@
                         <VBox prefHeight="55.0" prefWidth="489.0" spacing="10.0">
                            <children>
                               <Label alignment="CENTER" prefHeight="17.0" prefWidth="471.0" text="INGRESAR NOMBRE COMPLETO" />
-                              <TextField prefHeight="25.0" prefWidth="266.0">
+                              <TextField id="nombreUsuario" prefHeight="25.0" prefWidth="266.0">
                                  <VBox.margin>
                                     <Insets left="25.0" right="25.0" />
                                  </VBox.margin>
@@ -38,7 +38,7 @@
                         </VBox>
                         <VBox alignment="CENTER_LEFT" prefHeight="53.0" prefWidth="314.0">
                            <children>
-                              <Button alignment="CENTER" mnemonicParsing="false" prefHeight="34.0" prefWidth="116.0" text="BUSCAR" />
+                              <Button id="btnBuscar" alignment="CENTER" mnemonicParsing="false" prefHeight="34.0" prefWidth="116.0" text="BUSCAR" />
                            </children>
                         </VBox>
                      </children>
