--- a/src/main/resources/com/example/syshealthfx/medicos-views/consulta-paciente.fxml
+++ b/src/main/resources/com/example/syshealthfx/medicos-views/consulta-paciente.fxml
@@ -1,14 +1,101 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.syshealthfx.ConsultaController"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="650.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.syshealthfx.ConsultaController">
+   <children>
+      <VBox prefHeight="650.0" prefWidth="1280.0" style="-fx-background-color: white;">
+         <children>
+            <GridPane prefHeight="143.0" prefWidth="1204.0" style="-fx-border-color: transparent transparent black transparent; -fx-border-width: 3px;">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <Label prefHeight="32.0" prefWidth="135.0" text="NOMBRE DEL PACIENTE: " />
+                        <TextField fx:id="nombrePaciente" editable="false" prefWidth="261.0" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1">
+                     <children>
+                        <Label prefHeight="32.0" prefWidth="135.0" text="ID CITA:" />
+                        <TextField fx:id="idCita" editable="false" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="1">
+                     <children>
+                        <Label prefHeight="32.0" prefWidth="135.0" text="FECHA:" />
+                        <TextField fx:id="fecha" editable="false" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                     <children>
+                        <Label prefHeight="32.0" prefWidth="135.0" text="MEDICO:" />
+                        <TextField fx:id="nombreMedico" editable="false" prefHeight="25.0" prefWidth="299.0" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="2">
+                     <children>
+                        <Label prefHeight="32.0" prefWidth="135.0" text="CEDULA PROFESIONAL:" />
+                        <TextField fx:id="cedula" editable="false" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                     <children>
+                        <Label prefHeight="32.0" prefWidth="135.0" text="ID PACIENTE:" />
+                        <TextField fx:id="idPaciente" editable="false" />
+                     </children>
+                  </HBox>
+               </children>
+            </GridPane>
+            <HBox alignment="CENTER" prefHeight="63.0" prefWidth="1280.0" spacing="10.0">
+               <children>
+                  <Button fx:id="btnGuardar" mnemonicParsing="false" onAction="#guardarHistorial" text="GUARDAR HISTORIAL" />
+                  <Button fx:id="btnCrearReceta" mnemonicParsing="false" onAction="#crearReceta" text="CREAR RECETA" />
+                  <Button fx:id="btnCrearLab" mnemonicParsing="false" onAction="#crearLaboratorio" text="ORDEN DE LABORATORIO" />
+                  <Button mnemonicParsing="false" onAction="#terminarCita" text="TERMINAR CITA" />
+               </children>
+            </HBox>
+            <HBox prefHeight="53.0" prefWidth="1280.0">
+               <children>
+                  <VBox alignment="CENTER" prefHeight="53.0" prefWidth="333.0">
+                     <children>
+                        <Label text="HISTORICO DE CITAS" />
+                        <ComboBox fx:id="historicoFechas" prefHeight="25.0" prefWidth="169.0" promptText="SELECCIONE" />
+                     </children>
+                  </VBox>
+               </children>
+            </HBox>
+            <VBox alignment="CENTER" fillWidth="false" prefHeight="237.0" prefWidth="1280.0" spacing="10.0">
+               <children>
+                  <Label prefHeight="38.0" prefWidth="186.0" text="DESCRIPCION DE PADECIMIENTOS" />
+                  <TextArea fx:id="descripcion" prefHeight="150.0" prefWidth="813.0" promptText="ESCRIBA LOS PADECIMIENTOS DEL PACIENTE">
+                     <VBox.margin>
+                        <Insets left="20.0" right="20.0" />
+                     </VBox.margin>
+                  </TextArea>
+                  <Button fx:id="btnModificar" disable="true" mnemonicParsing="false" text="MODIFICAR HISTORIAL" />
+               </children>
+            </VBox>
+         </children>
+      </VBox>
+   </children>
 </AnchorPane>
