--- a/src/main/resources/com/example/syshealthfx/medicos-views/index-medicos.fxml
+++ b/src/main/resources/com/example/syshealthfx/medicos-views/index-medicos.fxml
@@ -8,7 +8,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="650.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.syshealthfx.MedicosController">
    <children>
       <VBox prefHeight="650.0" prefWidth="1280.0" stylesheets="@../styles.css">
@@ -20,8 +19,11 @@
                         <DropShadow />
                      </effect>
                      <children>
-                        <Label alignment="CENTER" prefHeight="51.0" prefWidth="275.0" text="CITAS AGENDADAS" />
-                        <VBox fx:id="citasHoy" prefHeight="200.0" prefWidth="100.0" />
+                        <Label alignment="CENTER" prefHeight="51.0" prefWidth="275.0" text="CITAS AGENDADAS">
+                           <font>
+                              <Font name="System Bold" size="22.0" />
+                           </font></Label>
+                        <VBox fx:id="citasHoy" prefHeight="601.0" prefWidth="272.0" />
                      </children>
                   </VBox>
                   <VBox prefHeight="650.0" prefWidth="1011.0">
@@ -35,11 +37,6 @@
                            <children>
                               <HBox alignment="CENTER" prefHeight="559.0" prefWidth="471.0" stylesheets="@../styles.css">
                                  <children>
-                                    <HBox alignment="CENTER" prefHeight="559.0" prefWidth="226.0">
-                                       <children>
-                                          <Button mnemonicParsing="false" prefHeight="55.0" prefWidth="213.0" styleClass="btn-agendar" text="CONSULTAR PACIENTE SIN CITA" />
-                                       </children>
-                                    </HBox>
                                     <Button fx:id="btnCerrarSesion" mnemonicParsing="false" onAction="#cerrarSesion" prefHeight="55.0" prefWidth="141.0" styleClass="btn-agendar" text="CERRAR SESIÓN" />
                                  </children>
                               </HBox>
