--- a/src/main/resources/com/example/syshealthfx/recepcion-views/index-recepcion.fxml
+++ b/src/main/resources/com/example/syshealthfx/recepcion-views/index-recepcion.fxml
@@ -14,7 +14,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane fx:id="frameAdmin" prefHeight="400.0" prefWidth="600.0" stylesheets="@../styles.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.syshealthfx.RecepcionController">
    <children>
       <HBox fx:id="contenidoHBox" prefHeight="650.0" prefWidth="1324.0">
@@ -61,7 +60,7 @@
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                      </rowConstraints>
                      <children>
-                        <HBox alignment="CENTER" prefHeight="181.0" prefWidth="441.0" styleClass="panel-acceso">
+                        <HBox fx:id="registrarUsuario" alignment="CENTER" prefHeight="181.0" prefWidth="441.0" styleClass="panel-acceso">
                            <children>
                               <ImageView fitHeight="111.0" fitWidth="100.0">
                                  <image>
@@ -75,7 +74,7 @@
                               </Label>
                            </children>
                         </HBox>
-                        <HBox prefHeight="226.0" prefWidth="507.0" styleClass="panel-acceso" GridPane.columnIndex="1">
+                        <HBox fx:id="buscarPaciente" prefHeight="226.0" prefWidth="507.0" styleClass="panel-acceso" GridPane.columnIndex="1">
                            <children>
                               <ImageView fitHeight="97.0" fitWidth="98.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
